--- a/src/leiningen/new/naive_http_kit/index.html
+++ b/src/leiningen/new/naive_http_kit/index.html
@@ -2,9 +2,12 @@
 <html>
   <head>
     <title>Hello, world!</title>
-    <script type="text/javascript" src="/js/{{name}}.js"></script>
   </head>
   <body>
-      <h1>Hello, world!</h1>
+    <h1>Hello, world!</h1>
+    <script src="http://fb.me/react-0.8.0.js"></script>
+    <script src="/js/goog/base.js" type="text/javascript"></script>
+    <script type="text/javascript" src="/js/{{ name }}.js"></script>
+    <script type="text/javascript">goog.require("{{ name }}.core");</script>
   </body>
 </html>
